# llvm-guard-handler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build_pass  inspect.cpp  odd.c
checkpoint/: CMakeLists.txt  CheckPointPass.cpp
examples/: odd.c  trace.c
function_passes/: CheckPointPass.cpp  UnoptimizedCopyPass.cpp
src/: run_tests.py
src/passes/: CMakeLists.txt  README.md  build_pass
src/passes/Utils/: Utils.h
src/passes/basic_block_passes/: BarrierPass.cpp  CMakeLists.txt
src/passes/function_passes/: .UnoptimizedCopyPass.cpp.swo  CMakeLists.txt  CheckPointPass.cpp  LiveVariablesPass.cpp  UnoptimizedCopyPass.cpp
src/passes/function_passes/Utils/: Utils.cpp
src/stackmap_checker/: Makefile  README.md  call_stack_state.c  call_stack_state.h  guard.c  jump.s  stmap.c  stmap.h  trace.c  utils.c  utils.h
src/tests/: Makefile  support.py  test_output.py  trace.c  trace.out  trace2.c  trace_void_func.out
src/tests/passes/: CMakeLists.txt
src/tests/passes/basic_block_passes/: CMakeLists.txt  MarkUnoptimizedPass.cpp
src/tests/test_control_flow/: test_modified_output.py
src/tests/test_control_flow/test_programs/: Makefile  trace_marked.c
src/tests/test_programs/: Makefile  trace.c  trace_call_after_failure.c  trace_call_after_inlined.c  trace_indirection.c  trace_indirection2.c  trace_inlining.c  trace_ld.c  trace_repeated.c  trace_ret_char.c  trace_simple.c  trace_structs.c  trace_void_func.c
stackmap_checker/: Makefile  README.md  inspect.c  runtime.c  stmap.c  stmap.h  trace.c  utils.c
